--- a/org-init.org
+++ b/org-init.org
@@ -189,10 +189,12 @@ p
   (add-hook 'c++-mode-hook #'my-select-g++check-for-checker)
 
   ;; Flycheck inline mode
-  (use-package flycheck-inline)
+  (use-package flycheck-inline
+    :ensure t)
   (with-eval-after-load 'flycheck
     (flycheck-inline-mode))
-  (use-package quick-peek)
+  (use-package quick-peek
+    :ensure t)
 #+END_SRC
 
 * Line numbers
@@ -229,13 +231,16 @@ p
 
   ;; Setup smex, M-x auto completion
   (use-package smex
+    :ensure t
     :config
     (global-set-key (kbd "M-x") 'smex)
     (global-set-key (kbd "M-X") 'smex-major-mode-commands)
     (global-set-key (kbd "C-c C-c M-x") 'execute-extended-command))
 
-  (use-package visual-regexp)
+  (use-package visual-regexp
+    :ensure t)
   (use-package visual-regexp-steroids
+    :ensure t
     :config
     (define-key global-map (kbd "C-c r") 'vr/replace)
     (define-key global-map (kbd "C-c q") 'vr/query-replace)
@@ -295,6 +300,7 @@ p
   ;; ==== Side bar file managers ==== ;;
   ;; Add file tree
   (use-package neotree
+    :ensure t
     :config
     (global-set-key (kbd "C-;") 'neotree-toggle))
   ;; File tree icons style
@@ -317,6 +323,7 @@ p
   ;; '(("files" "^\\*scratch\\*" nil nil bs-visits-non-file bs-sort-buffer-interns-are-last)))
   ;; (global-set-key (kbd "<f2>") 'bs-show))
   (use-package bs
+    :ensure t
     :bind ("<f2>" . bs-show)
     :config
     (setq bs-configurations
@@ -335,14 +342,26 @@ p
 #+END_SRC
 
 * Ruby packages
+
 #+BEGIN_SRC emacs-lisp
 
   ;; (use-package rvm
     ;; :config (rvm-use-default))
 
-  (use-package bundler)
+  (use-package bundler
+    :ensure t)
 #+END_SRC
 
+* Elixir packages
+#+BEGIN_SRC emacs-lisp
+
+  (use-package elixir-mode
+     :ensure t)
+     
+  (use-package alchemist
+     :ensure t)
+     
+#+END_SRC
 * Keybindings remap
 #+BEGIN_SRC emacs-lisp
 
