--- a/org-init.org
+++ b/org-init.org
@@ -14,7 +14,12 @@
   (server-start)
   (menu-bar-mode t)
   (tool-bar-mode -1)
-  (scroll-bar-mode -1)
+  ;;(scroll-bar-mode -1)
+  (if (display-graphic-p)
+    (progn
+      (tool-bar-mode -1)
+      (scroll-bar-mode -1)))
+
   (show-paren-mode t)
   (setq initial-scratch-message "")
   (fset 'yes-or-no-p 'y-or-n-p)
@@ -31,8 +36,9 @@
   (setq show-paren-style 'expression)
   (show-paren-mode 2)
 
-
   (global-hl-line-mode t) ; Highlights the current cursor line
+
+  (company-quickhelp-mode) ; Company quick help while idling on a completion candidate
 #+END_SRC
 
 * Open files in same emacs frame
@@ -170,6 +176,9 @@ p
      /usr/include"))
     (add-hook 'c++-mode-hook 'my:ac-c-header-init)
     (add-hook 'c-mode-hook 'my:ac-c-header-init)
+
+(use-package company-quickhelp
+  :ensure t)
 #+END_SRC
 
 * Flycheck
@@ -212,7 +221,6 @@ p
 #+BEGIN_SRC emacs-lisp
 
   (use-package ido
-    :ensure t
     :bind (("C-x b" . ido-switch-buffer))
     :init
       (defun my-ido-keys ()
@@ -439,14 +447,17 @@ p
   #+END_SRC
 ** org code execution config
 #+BEGIN_SRC emacs-lisp
-  (org-babel-do-load-languages
-  'org-babel-load-languages '((C . t)))
+  (use-package ob-elixir
+    :ensure t)
 
   (org-babel-do-load-languages
-  'org-babel-load-languages '((ruby . t)))
+  'org-babel-load-languages '(
+    (C . t)
+    (ruby . t)
+    (elixir . t)
+    (gnuplot . t)
+    (org . t)))
 
-  (org-babel-do-load-languages
-  'org-babel-load-languages '((gnuplot . t)))
 #+END_SRC
 * iBuffer
 #+BEGIN_SRC emacs-lisp
@@ -488,6 +499,7 @@ p
 
 #+END_SRC
 * Ace windows for easy window switching
+
   #+BEGIN_SRC emacs-lisp
 
     (use-package ace-window
@@ -518,5 +530,86 @@ p
 
   (use-package git-timemachine
     :ensure t)
+
+#+END_SRC
+* C# Mode
+
+#+BEGIN_SRC emacs-lisp
+  (use-package csharp-mode
+      :ensure t
+      :config
+
+      (add-hook 'csharp-mode-hook 'sm-csharp-mode-setup t))
+
+  ;; (defun my-csharp-mode-setup ()
+  ;;   (setq c-syntactic-indentation t)
+  ;;   (c-set-style "k&r"))
+
+  (defun sm-csharp-mode-setup ()
+    (setq indent-tabs-mode nil)
+    (setq c-syntactic-indentation t)
+    (c-set-style "ellemtel")
+    (setq c-basic-offset 4)
+    (setq truncate-lines t)
+    (setq tab-width 4)
+    (setq evil-shift-width 4))
+
+  (use-package omnisharp
+      :ensure t
+      :after company
+      :config
+
+      (add-hook 'csharp-mode-hook 'omnisharp-mode)
+      (add-hook 'csharp-mode-hook 'c-set-style "k&r")
+      (eval-after-load
+      'company
+      '(add-to-list 'company-backends 'company-omnisharp))
+
+      (add-hook 'csharp-mode-hook #'company-mode)
+      (add-hook 'csharp-mode-hook #'flycheck-mode))
+      ;; (add-hook 'csharp-mode-hook 'my-csharp-mode-setup t))
+
+#+END_SRC
+* C Code Format
+#+BEGIN_SRC emacs-lisp
+  ;; (use-package magit
+  ;;   :ensure t
+  ;;   :init
+  ;;   (progn
+  ;;     (bind-key "C-x g" 'magit-status)
+  ;;     ))
+
+  ;; (use-package git-gutter
+  ;;   :ensure t
+  ;;   :init
+  ;;   (global-git-gutter-mode +1))
+
+  ;; (use-package git-timemachine
+  ;;   :ensure t)
+(c-add-style
+  "csharp"
+  '("k&r"))
+
+(setq c-default-style '((csharp-mode  . "k&r")))
+
+#+END_SRC
+* Pojectile
+#+BEGIN_SRC emacs-lisp
+(use-package projectile
+    :ensure t
+    :config
+    
+    (define-key projectile-mode-map (kbd "C-c p") 'projectile-command-map)
+
+    (projectile-mode)
+    
+    (setq projectile-enable-caching t)
+    (setq projectile-indexing-method 'alien)
+    (setq projectile-globally-ignored-file-suffixes
+      '("#" "~" ".swp" ".o" ".so" ".exe" ".dll" ".elc" ".pyc" ".jar"))
+    (setq projectile-globally-ignored-directories
+      '(".git" "node_modules" "__pycache__" ".vs"))
+    (setq projectile-globally-ignored-files '("TAGS" "tags" ".DS_Store"))
+)
 
 #+END_SRC
